--- a/frontend/src/Components/Footer/footer.css
+++ b/frontend/src/Components/Footer/footer.css
@@ -18,6 +18,7 @@
  
 .footer-content-left > img{
     width: 150px;
+
 }
 
 .footer-content-left,.footer-content-center,.footer-content-right{
@@ -40,6 +41,8 @@
 .footer-social-icons{
     width: 40px;
     margin-right: 15px;
+    display: flex;
+    gap: 20px;
 }
 
 .footer hr{
@@ -48,4 +51,15 @@
     margin: 20px 0px;
     background-color: grey;
     border: none;
+}
+
+@media (max-width:750px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
