--- a/frontend/src/Components/FoodItem/fooditem.css
+++ b/frontend/src/Components/FoodItem/fooditem.css
@@ -5,11 +5,21 @@
   box-shadow: 0px 0px 10px #00000015;
   transition: 0.3s;
   animation: fadeIn 1s;
+
 }
 
 .food-item-img {
   width: 100%;
   border-radius: 15px 15px 0px 0px;
+  overflow: hidden;
+  height: 200px;
+  object-fit: cover;
+}
+
+food-item-img-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .food-item-info {
